@@ -1,4 +1,9 @@
-﻿
-Klisk.homeworld.description=<Klisk homeworld>
+﻿Klisk.homeworld.description=<Klisk homeworld>\n\
+The whole planet is covered with a huge desert without any traces of water.\n\
+From space we can see huge craters with lights of cities inside.\n\
+Enormous artificial structure is orbiting the planet, it may be some kind of shipyard or scaffold.
 
-Humans.homeworld.description=<Earth>
+Humans.homeworld.description=<Earth>\n\
+Earth defence systems detected unauthorised surface scanning.\n\
+Signatures are recognized as Aurora project ship.\n\
+Humanity warmly welcomes brave space explorers!
