@@ -1,4 +1,3 @@
-﻿
 Klisk.homeworld.description=<Родная планета расы Клиск>\n\
 Пустынная поверхность без каких-либо признаков воды\n\
 выглядит необитаемой, однако, даже из космоса видны\n\
